--- a/about.html
+++ b/about.html
@@ -1,4 +1,40 @@
+<html>
+
+<head>
+	<meta content="width=device-width; initial-scale=1.0; maximum-scale=1.5; user-scalable=YES;" name="viewport" />
+</head>
+
 <body>
-    <h1>WaveTile</h1> 
-    <h2> by <a href=\"http://daio.io\">Daio.io</a> <img src=http://www.pixplorer.co.uk/img/pixel_me.gif height=20 width=20> </h2>
+	<div>
+		<h2>WaveTile</h2>
+		<h3> by <a href=\ "http://daio.io\">Daio.io</a> <img src=http://www.pixplorer.co.uk/img/pixel_me.gif height=20 width=20> </h3>
+		<p>
+			App icon by Noun Project
+		</p>
+		<strong>WaveTile is powered by Magic Seaweed for surf weather reports. WaveTile has no affiliation with
+        with </strong><a href="http://magicseaweed.com">Magic Seaweed</a>
+	</div>
+	<div>
+		<h2>Open Source Libraries</h2>
+		<h4>Retrofit</h4>
+
+		<h5>Copyright 2013 Square, Inc.</h5>
+
+		Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
+		You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or
+		agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+		CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and
+		limitations under the License.
+		<br> -
+		<h4>Moshi</h4>
+		<h5>Copyright 2015 Square, Inc.</h5>
+
+		Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
+		You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required by applicable law or
+		agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+		CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and
+		limitations under the License.
+	</div>
 </body>
+
+</html>
