add magic seaweed logo to about

--- a/about.html
+++ b/about.html
@@ -7,10 +7,13 @@
 <body>
 	<div>
 		<h2>WaveTile</h2>
-		<h3> by <a href=\ "http://daio.io\">Daio.io</a> <img src=http://www.pixplorer.co.uk/img/pixel_me.gif height=20 width=20> </h3>
+		<h3> by <a href="http://daio.io\">Daio.io</a> <img src=http://www.pixplorer.co.uk/img/pixel_me.gif height=20 width=20> </h3>
 		<p>
-			App icon by Noun Project
+			App icons by Noun Project
 		</p>
+		<a href="http://magicseaweed.com"><img height="30" width="120" src="http://im-1-uk.msw.ms/msw_powered_by.png"></a>
+		<br>
+		<br>
 		<strong>WaveTile is powered by Magic Seaweed for surf weather reports. WaveTile has no affiliation with
         with </strong><a href="http://magicseaweed.com">Magic Seaweed</a>
 	</div>
